# Monolithic_AMG_For_Stokes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
data_collection/: README.md  launch.sh
data_collection/application_problems/: launch.sh
data_collection/application_problems/sv/: launch.sh
data_collection/application_problems/th/: launch.sh
data_collection/parameter_search/: collect_data.sh  run.sh
data_collection/parameter_search/sv/: fig_7.py  run_sv.sh
data_collection/parameter_search/th/: run_th.sh
data_collection/plot_common/: common.py  dataloader.py  palettes.py  palettes0.py
data_collection/robustness_problems/sv/: launch.sh
data_collection/robustness_problems/th/: launch.sh
data_collection/section_4/: collect_data.sh  fig_6.py  fig_8.py  lsc_dc_results.py  lsc_dgs_results.py  sv_results.py  th_lsc_results.py  vanka_results.py
data_collection/section_4/sv/: collect_data.sh  p2p1disc_results.py  problem_iterator.py
data_collection/section_4/th/: problem_iterator.py  run.sh
data_collection/section_4_new/: th_vanka_results.py
data_collection/section_4_new/sv/: collect_data.sh
data_collection/section_5/: fig_8.py  section_5_results.py
data_collection/section_5_new/: collect_data.sh  fig_8.py  section_5_results.py
sysmg/: __init__.py
sysmg/solvers/: __init__.py  block_diag_mg.py  ho_wrapper.py  mg_common.py  stokes_mg.py
sysmg/systems/: __init__.py  stokes.py  system.py
sysmg/util/: __init__.py  alg_util.py  bmat.py  callback.py  collect_data.py  decorators.py  param_search.py
(+980 files in other folders)
