[metadata]
name = sysmg
version = attr: sysmg.__version__
description = "Monolithic multigrid preconditioners for stokes systems."),
long_description = file: README.md
keywords = AMG, Stokes, saddle-point systems
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
author = Alexey Voronin
author_email = voronin2@illinois.edu
license = MIT
url = https://github.com/alexey-voronin/sysMG

[options]
include_package_data = False
packages = find:
python_requires = ~=3.10
install_requires=
    firedrake>=0.13.0
    pyamg>=4.0.0
    pandas>=1.4.0
    pympler>=1.0.1
